kubernetes-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: savannah-web
  namespace: web
  labels:
    app: savannah-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: savannah-web
  template:
    metadata:
      labels:
        app: savannah-web
    spec:
      containers:
        - name: web
          image: 193801312183.dkr.ecr.us-east-1.amazonaws.com/musyoka:1.0.2
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
