kubernetes-manifests/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: savannah-web-ingress
  namespace: web
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: devops-tools
    #alb.ingress.kubernetes.io/healthcheck-path: "/healthz"
    alb.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: alb
  rules:
    - host: web.193801312183.realhandsonlabs.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: savannah-web-svc
                port:
                  number: 80
